--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Digitalt Design og Udvikling - H.C. Ørsted Lyngby</title>
+<title>Programmering 3i - 2020/2021 - H.C. Ørsted Lyngby</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -39,7 +39,7 @@ table,td {
     <i class="fa fa-remove"></i>
   </a>
   <h4 class="w3-bar-item"><b>Indhold</b></h4>
-  <a class="w3-bar-item w3-button w3-hover-black" href="#om">Om Programmering 3i</a>
+  <a class="w3-bar-item w3-button w3-hover-black" href="#velkommen">Velkommen</a>
 </nav >
 
 <!-- Overlay effect when opening sidebar on small screens -->
@@ -51,9 +51,9 @@ table,td {
 
 
 
-  <div class="w3-row w3-padding-64" id="om">
+  <div class="w3-row w3-padding-64" id="velkommen">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-teal">Om Programmering 3i</h1>
+      <h1 class="w3-text-teal">Velkommen</h1>
 		<p>
 			Velkommen til Programmering 3i. 
       Dette website indeholder en fagliemål, kernestof, meteriale og studieplanen specifikt rettet for holdet "Programmering 3i år 2020/2021".
@@ -81,7 +81,7 @@ table,td {
 
   <footer id="myFooter">
     <div class="w3-container w3-theme-l2 w3-padding-32">
-      <h4>Kontakt : Anders Petersen - ajrp@tec.dk &amp; John Jensen - jgj@tec.dk</h4>
+      <h4>Kontakt : Anders Petersen - ajrp@tec.dk</h4>
     </div>
 
     <div class="w3-container w3-theme-l1">
