--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ table,td {
       <h1 class="w3-text-teal">Velkommen</h1>
 		<p>
 			Velkommen til Programmering 3i. 
-      Dette website indeholder en fagliemål, kernestof, meteriale og studieplanen specifikt rettet for holdet "Programmering 3i år 2020/2021".
+      Dette website indeholder information om diverse fagligemål, kernestof, meteriale og studieplan for holdet "Programmering 3i år 2020/2021".
       Hvis der er noget du ikke forstår eller synes mangler er du mere end velkommen til at kontakte underviseren Anders Petersen, på mail ajrp@tec.dk.  
 		</p>
     </div>
