--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@ table,td {
     <i class="fa fa-remove"></i>
   </a>
   <h4 class="w3-bar-item"><b>Indhold</b></h4>
-  <a class="w3-bar-item w3-button w3-hover-black" href="#velkommen">Velkommen</a>
+  	<a class="w3-bar-item w3-button w3-hover-black" href="#velkommen">Velkommen</a>
+	<a class="w3-bar-item w3-button w3-hover-black" href="#2G">Indhold 2G</a>
 </nav >
 
 <!-- Overlay effect when opening sidebar on small screens -->
@@ -62,6 +63,15 @@ table,td {
       Dette website indeholder information om diverse fagligemål, kernestof, meteriale og studieplan for holdet "Programmering 3i år 2020/2021".
       Hvis der er noget du ikke forstår eller synes mangler er du mere end velkommen til at kontakte underviseren Anders Petersen, på mail ajrp@tec.dk.  
 		</p>
+    </div>
+  </div>
+	
+
+  <div class="w3-row w3-padding-64" id="2G">
+    <div class="w3-twothird w3-container">
+      <h1 class="w3-text-teal">Indhold 2G</h1>
+		<h5 class="w3-text-teal">Afslutning Poster forløb</h1>
+	    	<td><a href="https://youtu.be/3W35Gl_KmWQ">Aflutning tilretning af posters D.19/3 - 2020</a></td>
     </div>
   </div>
 
