--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ table,td {
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-teal">Indhold 2G</h1>
 		<h5 class="w3-text-teal">Afslutning Poster forløb</h1>
-	    	<td><a href="https://youtu.be/3W35Gl_KmWQ">Aflutning tilretning af posters D.19/3 - 2020</a></td>
+	    	<td><a href="https://youtu.be/3W35Gl_KmWQ">Video: Aflutning tilretning af posters - D.19/3 2020</a></td>
     </div>
   </div>
 
