--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ table,td {
       <h1 class="w3-text-teal">Indhold 2G</h1>
 		<h5 class="w3-text-teal">Afslutning Poster forløb</h1>
 	    	<td><a href="https://youtu.be/3W35Gl_KmWQ">Video: Aflutning tilretning af posters - D.19/3 2020</a></td>
+	    	<h5 class="w3-text-teal">Processing med IntelliJ forløb</h1>
+	   	<td><a href="https://youtu.be/FSK2y8ShGsY">Video: Del. 1 Processing med IntelliJ - D.24/3 2020</a></td>
     </div>
   </div>
 
