--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@ table,td {
 	    	<td><a href="https://youtu.be/3W35Gl_KmWQ">Video: Aflutning tilretning af posters - D.19/3 2020</a></td>
 	    	<h5 class="w3-text-teal">Processing med IntelliJ forløb</h1>
 	   	<td><a href="https://youtu.be/FSK2y8ShGsY">Video: Del. 1 Processing med IntelliJ - D.24/3 2020</a></td>
+	    	<td><a href="https://youtu.be/gMzuTSELgPY">Video: Del. 2 Processing med IntelliJ - Opgaven - D.24/3 2020</a></td>
+		<td><a href="https://youtu.be/AW3wyoQmLvg">Video: Del. 3 Processing med IntelliJ - Løsning - D.24/3 2020</a></td>
+	    	<td><a href="https://youtu.be/fqifMFBLLoA">Video: Fravær - Processing med IntelliJ - D.25/3 2020</a></td>
+
     </div>
   </div>
 
