--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ table,td {
 	    	<td><a href="https://youtu.be/gMzuTSELgPY">Video: Del. 2 Processing med IntelliJ - Opgaven - D.24/3 2020</a></td>
 		<td><a href="https://youtu.be/AW3wyoQmLvg">Video: Del. 3 Processing med IntelliJ - Løsning - D.24/3 2020</a></td>
 	    	<td><a href="https://youtu.be/fqifMFBLLoA">Video: Fravær - Processing med IntelliJ - D.25/3 2020</a></td>
+	    	<td><a href="https://youtu.be/jXC2HJI1Fg0">Video: Maven - Processing med IntelliJ - D.26/3 2020</a></td>
 
     </div>
   </div>
