--- a/index.html
+++ b/index.html
@@ -79,12 +79,14 @@ table,td {
 				</td>
 	    		</tr>
 	  	</table>
-	  	<h5 class="w3-text-teal">Processing med IntelliJ - D.6/3 til D.29/3 2020</h5>
-	   	<a href="https://youtu.be/FSK2y8ShGsY">Video: Del. 1 Processing med IntelliJ - D.24/3 2020</a></br>
-	    	<a href="https://youtu.be/gMzuTSELgPY">Video: Del. 2 Processing med IntelliJ - Opgaven - D.24/3 2020</a></br>
-		<a href="https://youtu.be/AW3wyoQmLvg">Video: Del. 3 Processing med IntelliJ - Løsning - D.24/3 2020</a></br>
-	    	<a href="https://youtu.be/fqifMFBLLoA">Video: Fravær - Processing med IntelliJ - D.25/3 2020</a></br>
-	    	<a href="https://youtu.be/jXC2HJI1Fg0">Video: Maven - Processing med IntelliJ - D.26/3 2020</a></br>
+	  	
+	    	<h5 class="w3-text-teal">Processing med IntelliJ - D.6/3 til D.29/3 2020</h5>
+	    	<table border=1 >
+		<tr><td><a href="https://youtu.be/FSK2y8ShGsY">Video: Del. 1 Processing med IntelliJ - D.24/3 2020</a></td></tr>
+	    	<tr><td><a href="https://youtu.be/gMzuTSELgPY">Video: Del. 2 Processing med IntelliJ - Opgaven - D.24/3 2020</a></td></tr>
+		<tr><td><a href="https://youtu.be/AW3wyoQmLvg">Video: Del. 3 Processing med IntelliJ - Løsning - D.24/3 2020</a></td></tr>
+	    	<tr><td><a href="https://youtu.be/fqifMFBLLoA">Video: Fravær - Processing med IntelliJ - D.25/3 2020</a></td></tr>
+	    	<tr><td><a href="https://youtu.be/jXC2HJI1Fg0">Video: Maven - Processing med IntelliJ - D.26/3 2020</a></td></tr>
 		
 		<h5 class="w3-text-teal">GUI-lib lavet i IntelliJ - D.30/3 til D.5/5 2020</h5>
 
