--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@ table,td {
 		<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/AW3wyoQmLvg">Video: Del. 3 Processing med IntelliJ - Løsning</a></td></tr>
 	    	<tr><td>D.25/3 2020</td><td><a href="https://youtu.be/fqifMFBLLoA">Video: Fravær - Processing med IntelliJ</a></td></tr>
 	    	<tr><td>D.26/3 2020</td><td><a href="https://youtu.be/jXC2HJI1Fg0">Video: Maven - Processing med IntelliJ</a></td></tr>
+	    	</table>
 		
 		<h5 class="w3-text-teal">GUI-lib lavet i IntelliJ - D.30/3 til D.5/5 2020</h5>
 		<table border=1 >
