--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@ table,td {
 	  	
 	    	<h5 class="w3-text-teal">Processing med IntelliJ - D.6/3 til D.29/3 2020</h5>
 	    	<table border=1 >
-		<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/FSK2y8ShGsY">Video: Del. 1 Processing med IntelliJ</a></td></tr>
-	    	<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/gMzuTSELgPY">Video: Del. 2 Processing med IntelliJ - Opgaven</a></td></tr>
-		<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/AW3wyoQmLvg">Video: Del. 3 Processing med IntelliJ - Løsning</a></td></tr>
-	    	<tr><td>D.25/3 2020</td><td><a href="https://youtu.be/fqifMFBLLoA">Video: Fravær - Processing med IntelliJ</a></td></tr>
-	    	<tr><td>D.26/3 2020</td><td><a href="https://youtu.be/jXC2HJI1Fg0">Video: Maven - Processing med IntelliJ</a></td></tr>
+		<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/FSK2y8ShGsY">Video: Del. 1 Om Processing med IntelliJ</a></td></tr>
+	    	<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/gMzuTSELgPY">Video: Del. 2 Opgaven</a></td></tr>
+		<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/AW3wyoQmLvg">Video: Del. 3 Løsning</a></td></tr>
+	    	<tr><td>D.25/3 2020</td><td><a href="https://youtu.be/fqifMFBLLoA">Video: Fravær</a></td></tr>
+	    	<tr><td>D.26/3 2020</td><td><a href="https://youtu.be/jXC2HJI1Fg0">Video: Maven</a></td></tr>
 	    	</table>
 		
 		<h5 class="w3-text-teal">GUI-lib lavet i IntelliJ - D.30/3 til D.5/5 2020</h5>
