--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ table,td {
 		<tr>
 		<td>D.19/3 2020</td>
 		<td><a href="https://youtu.be/3W35Gl_KmWQ">Video: Aflutning tilretning af posters</a></td>
+		<td><a href="2G/OOP_Posters/FORLØB - _OBJEKT ORIENTERET PROGRAMMERINGS POSTERS - HA_NDBOG.pdf">Posters grupper</a></td>
 	    	</tr>
 	  	</table>
 	  	
