--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@ table,td {
 	    	<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/gMzuTSELgPY">Video: Del. 2 Opgaven</a></td></tr>
 		<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/AW3wyoQmLvg">Video: Del. 3 Løsning</a></td></tr>
 	    	<tr><td>D.25/3 2020</td><td><a href="https://youtu.be/fqifMFBLLoA">Video: Fravær</a></td></tr>
-	    	<tr><td>D.26/3 2020</td><td><a href="https://youtu.be/jXC2HJI1Fg0">Video: Maven</a></td></tr>
+	    	<tr>
+			<td>D.26/3 2020</td><td><a href="https://youtu.be/jXC2HJI1Fg0">Video: Maven</a></td>
+			<td><a href="2G/Maven/pom.xml">pom.xml</a></td>
+		</tr>
 	    	</table>
 		
 		<h5 class="w3-text-teal">GUI-lib lavet i IntelliJ - D.30/3 til D.5/5 2020</h5>
