--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ table,td {
 		<h5 class="w3-text-teal">OOP-Poster - D.17/2 til D.5/3 2020</h5>
 	    	<table border=1 >
 		<tr>
+		<th>Dato</th><th>Video</th><th>Materiale</th>
+		</tr>
+		<tr>
 		<td>D.19/3 2020</td>
 		<td><a href="https://youtu.be/3W35Gl_KmWQ">Video: Aflutning tilretning af posters</a></td>
 		<td><a href="2G/OOP_Posters/FORLØB - _OBJEKT ORIENTERET PROGRAMMERINGS POSTERS - HA_NDBOG.pdf">Posters grupper</a></td>
@@ -82,18 +85,25 @@ table,td {
 	  	
 	    	<h5 class="w3-text-teal">Processing med IntelliJ - D.6/3 til D.29/3 2020</h5>
 	    	<table border=1 >
+		<tr>
+		<th>Dato</th><th>Video</th><th>Materiale</th>
+		</tr>
 		<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/FSK2y8ShGsY">Video: Del. 1 Om Processing med IntelliJ</a></td></tr>
 	    	<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/gMzuTSELgPY">Video: Del. 2 Opgaven</a></td></tr>
 		<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/AW3wyoQmLvg">Video: Del. 3 Løsning</a></td></tr>
 	    	<tr><td>D.25/3 2020</td><td><a href="https://youtu.be/fqifMFBLLoA">Video: Fravær</a></td></tr>
 	    	<tr>
-			<td>D.26/3 2020</td><td><a href="https://youtu.be/jXC2HJI1Fg0">Video: Maven</a></td>
-			<td><a href="2G/Maven/pom.xml">pom.xml</a></td>
+		<td>D.26/3 2020</td><td><a href="https://youtu.be/jXC2HJI1Fg0">Video: Maven</a></td>
+		<td><a href="2G/Maven/pom.xml">pom.xml</a></td>
 		</tr>
 	    	</table>
 		
 		<h5 class="w3-text-teal">GUI-lib lavet i IntelliJ - D.30/3 til D.5/5 2020</h5>
 		<table border=1 >
+		<tr>
+		<th>Dato</th><th>Video</th><th>Materiale</th>
+		</tr>
+
 		<tr>
 		<td>D.19/3 2020</td>
 		<td><a href=""></a></td>
