--- a/index.html
+++ b/index.html
@@ -88,13 +88,16 @@ table,td {
 		<tr>
 		<th>Dato</th><th>Video</th><th>Materiale</th>
 		</tr>
-		<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/FSK2y8ShGsY">Video: Del. 1 Om Processing med IntelliJ</a></td></tr>
-	    	<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/gMzuTSELgPY">Video: Del. 2 Opgaven</a></td></tr>
-		<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/AW3wyoQmLvg">Video: Del. 3 Løsning</a></td></tr>
-	    	<tr><td>D.25/3 2020</td><td><a href="https://youtu.be/fqifMFBLLoA">Video: Fravær</a></td></tr>
+		<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/FSK2y8ShGsY">Del. 1 Om Processing med IntelliJ</a></td></tr>
+	    	<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/gMzuTSELgPY">Del. 2 Opgaven</a></td></tr>
+		<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/AW3wyoQmLvg">Del. 3 Løsning</a></td></tr>
+	    	<tr><td>D.25/3 2020</td><td><a href="https://youtu.be/fqifMFBLLoA">Fravær</a></td></tr>
 	    	<tr>
-		<td>D.26/3 2020</td><td><a href="https://youtu.be/jXC2HJI1Fg0">Video: Maven</a></td>
-		<td><a href="2G/Maven/pom.xml">pom.xml</a></td>
+		<td>D.26/3 2020</td><td><a href="https://youtu.be/jXC2HJI1Fg0">Maven</a></td>
+		<td>	
+			<a href="2G/Maven/pom.xml">pom.xml</a> , 
+			<a href="2G/Maven/Fa_ Processing i IntelliJ med Maven _-).pdf">Maven vejledning</a>
+		</td>
 		</tr>
 	    	</table>
 		
