--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ table,td {
   <h4 class="w3-bar-item"><b>Indhold</b></h4>
   	<a class="w3-bar-item w3-button w3-hover-black" href="#velkommen">Velkommen</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#2G">Indhold 2G</a>
+	<a class="w3-bar-item w3-button w3-hover-black" href="#3G">Indhold 3G</a>
 </nav >
 
 <!-- Overlay effect when opening sidebar on small screens -->
@@ -118,6 +119,16 @@ table,td {
 
 
 
+  <div class="w3-row w3-padding-64" id="3G">
+    <div class="w3-twothird w3-container">
+      <h1 class="w3-text-teal">Indhold 3G</h1>
+		<p>
+		</p>
+    </div>
+  </div>
+	
+	
+	
 
 
 
