--- a/index.html
+++ b/index.html
@@ -127,7 +127,19 @@ table,td {
 	      <div class="w3-row w3-padding-64" id="kernestof3G">
     <div class="w3-twothird w3-container">
       <h3 class="w3-text-teal">Kernestof i 3G</h3>
-	
+	    <p>Man skal selvfølgelig ikke glemme alt det kernestof man har lært i 2G det er klart. Det forventes at man kan og bruger alt det man har lært i 2G, 
+		    men derudover lærer og bruger det nye stof man får præsenteret i 3G.</br>
+		      Her følger en liste over det nye stof vi skal lære i 3G:</br></p>
+	  <ul>
+  		
+  		<li>Obejktorient programmering,- dette er et stort emne, og vi kommer fortsat til at bruge meget tid på oop.</li>
+		<li>Interaktion imellem systemer,- vi kigger på databasers og databasers interaktion med et program</li>
+		<li>Biblioteker og generiske dele,- dette emne dækkes af vores GUI-bibliotek, som vi bygger videre på<li>
+		<li>Abstrakt dokumentation,- vi øver os mere på at skrive rapporter og diverse diagrammer til at illustrere vores programmer.
+		<li>Algoritmer,- forklaring kommer</li>
+  		<li>Rekursion,- forklaring kommer</li>
+	</ul>  
+
     </div>
   </div>
 	    
