--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ table,td {
   <h4 class="w3-bar-item"><b>Indhold</b></h4>
   	<a class="w3-bar-item w3-button w3-hover-black" href="#velkommen">Velkommen</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#2G">Indhold 2G</a>
+	<a class="w3-bar-item w3-button w3-hover-black" href="#kernestof3G"> - Kernestof i 2G</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#3G">Indhold 3G</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#kernestof3G"> - Kernestof i 3G</a>
 </nav >
