--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ table,td {
   	<a class="w3-bar-item w3-button w3-hover-black" href="#velkommen">Velkommen</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#2G">Indhold 2G</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#kernestof3G"> - Kernestof i 2G</a>
+	<a class="w3-bar-item w3-button w3-hover-black" href="#forlob2G"> - Forløb i 2G</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#3G">Indhold 3G</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#kernestof3G"> - Kernestof i 3G</a>
 </nav >
@@ -75,9 +76,9 @@ table,td {
       <h1 class="w3-text-teal">Indhold 2G</h1>
 	    
 	    
-	    	      <div class="w3-row w3-padding-64" id="kernestof2G">
+	    	      <div class="w3-row w3-padding-64" id="forlob2G">
     <div class="w3-twothird w3-container">
-      <h3 class="w3-text-teal">Kernestof i 2G</h3>
+      <h3 class="w3-text-teal">Forløb i 2G</h3>
 		<h5 class="w3-text-teal">OOP-Poster - D.17/2 til D.5/3 2020</h5>
 	    	<table border=1 >
 		<tr>
