--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@ table,td {
 		      Her følger en liste over det nye stof vi skal lære i 3G:</br></p>
 	  <ul>
   		
-  		<li>Obejktorient programmering,- dette er et stort emne, og vi kommer fortsat til at bruge meget tid på oop.</li>
-		<li>Interaktion imellem systemer,- vi kigger på databasers og databasers interaktion med et program</li>
-		<li>Biblioteker og generiske dele,- dette emne dækkes af vores GUI-bibliotek, som vi bygger videre på<li>
-		<li>Abstrakt dokumentation,- vi øver os mere på at skrive rapporter og diverse diagrammer til at illustrere vores programmer.
-		<li>Algoritmer,- forklaring kommer</li>
-  		<li>Rekursion,- forklaring kommer</li>
+		  <li><u>Obejktorient programmering</u>,- dette er et stort emne, og vi kommer fortsat til at bruge meget tid på oop.</li>
+		  <li><u>Interaktion imellem systemer</u>,- vi kigger på databasers og databasers interaktion med et program</li>
+		  <li><u>Biblioteker og generiske dele</u>,- dette emne dækkes af vores GUI-bibliotek, som vi bygger videre på<li>
+		  <li><u>Abstrakt dokumentation</u>,- vi øver os mere på at skrive rapporter og diverse diagrammer til at illustrere vores programmer.
+		  <li><u>Algoritmer</u>,- forklaring kommer</li>
+		  <li><u>Rekursion</u>,- forklaring kommer</li>
 	</ul>  
 
     </div>
