--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@ table,td {
   <h4 class="w3-bar-item"><b>Indhold</b></h4>
   	<a class="w3-bar-item w3-button w3-hover-black" href="#velkommen">Velkommen</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#2G">Indhold 2G</a>
-	<a class="w3-bar-item w3-button w3-hover-black" href="#kernestof3G"> - Kernestof i 2G</a>
-	<a class="w3-bar-item w3-button w3-hover-black" href="#forlob2G"> - Forløb i 2G</a>
+	<a class="w3-bar-item w3-button w3-hover-black" href="#kernestof3G"><i> - Kernestof i 2G</i></a>
+	<a class="w3-bar-item w3-button w3-hover-black" href="#forlob2G"><i> - Forløb i 2G</i></a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#3G">Indhold 3G</a>
-	<a class="w3-bar-item w3-button w3-hover-black" href="#kernestof3G"> - Kernestof i 3G</a>
+	<a class="w3-bar-item w3-button w3-hover-black" href="#kernestof3G"><i> - Kernestof i 3G</i></a>
 </nav >
 
 <!-- Overlay effect when opening sidebar on small screens -->
