--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ table,td {
     <div class="w3-twothird w3-container">
       <h3 class="w3-text-teal">Forløb i 2G</h3>
 		<h5 class="w3-text-teal">OOP-Poster - D.17/2 til D.5/3 2020</h5>
-	    	<table border=1 >
+	    	<table>
 		<tr>
 		<th>Dato</th><th>Video</th><th>Materiale</th>
 		</tr>
@@ -94,7 +94,7 @@ table,td {
 	  	</table>
 	  	
 	    	<h5 class="w3-text-teal">Processing med IntelliJ - D.6/3 til D.29/3 2020</h5>
-	    	<table border=1 >
+	    	<table >
 		<tr>
 		<th>Dato</th><th>Video</th><th>Materiale</th>
 		</tr>
@@ -112,7 +112,7 @@ table,td {
 	    	</table>
 		
 		<h5 class="w3-text-teal">GUI-lib lavet i IntelliJ - D.30/3 til D.5/5 2020</h5>
-		<table border=1 >
+		<table>
 		<tr>
 		<th>Dato</th><th>Video</th><th>Materiale</th>
 		</tr>
@@ -166,13 +166,13 @@ table,td {
 				<h5 class="w3-text-teal">Årsprøveprojektet V 2.0</h5>
 					Dette miniforløb er vores første forløb i 3G. Formålet er at i skal finde jeres egne fejl i årsprøven fra sidste år,
 					og lave en endnu bedre besvarelse (det er i de fleste tilfælde muligt).
-					<table border=1 >
+					<table >
 					<tr>
 					<th>Dato</th><th>Video</th><th>Materiale</th>
 					</tr>
 
 					<tr>
-					<td>D.19/3 2020</td>
+					<td></td>
 					<td><a href=""></a></td>
 					</tr>
 					</table>
