--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@ table,td {
   vertical-align: top;
   text-align: left;
 }
+table {
+  border: 1px solid #dddddd;
+}
+th {
+  background-color: #dddddd;
+}
 </style>
 <body>
 
