--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ th {
 		<h5 class="w3-text-teal">OOP-Poster - D.17/2 til D.5/3 2020</h5>
 	    	<table>
 		<tr>
-		<th>Dato</th><th>Video</th><th>Materiale</th>
+		<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th>
 		</tr>
 		<tr>
 		<td>D.19/3 2020</td>
@@ -103,7 +103,7 @@ th {
 	    	<h5 class="w3-text-teal">Processing med IntelliJ - D.6/3 til D.29/3 2020</h5>
 	    	<table >
 		<tr>
-		<th>Dato</th><th>Video</th><th>Materiale</th>
+		<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th>
 		</tr>
 		<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/FSK2y8ShGsY">Del. 1 Om Processing med IntelliJ</a></td></tr>
 	    	<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/gMzuTSELgPY">Del. 2 Opgaven</a></td></tr>
@@ -121,7 +121,7 @@ th {
 		<h5 class="w3-text-teal">GUI-lib lavet i IntelliJ - D.30/3 til D.5/5 2020</h5>
 		<table>
 		<tr>
-		<th>Dato</th><th>Video</th><th>Materiale</th>
+		<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th>
 		</tr>
 
 		<tr>
@@ -136,7 +136,7 @@ th {
 		<h5 class="w3-text-teal">SO5 - Studie Retnings Case- Skrivnings forløb - D.4/5 til D.17/5 2020</h5>
 		<table>
 		<tr>
-		<th>Dato</th><th>Video</th><th>Materiale</th>
+		<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th>
 		</tr>
 
 		<tr>
@@ -148,7 +148,7 @@ th {
 		<h5 class="w3-text-teal">SO5 - Studie Retnings Case- Mundtligt forløb - D.18/5 til D.25/5 2020</h5>
 		<table>
 		<tr>
-		<th>Dato</th><th>Video</th><th>Materiale</th>
+		<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th>
 		</tr>
 
 		<tr>
@@ -163,7 +163,7 @@ th {
 	    	<h5 class="w3-text-teal">XML- forløb - D.20/5 til D.27/5 2020</h5>
 		<table>
 		<tr>
-		<th>Dato</th><th>Video</th><th>Materiale</th>
+		<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th>
 		</tr>
 
 		<tr>
@@ -177,7 +177,7 @@ th {
 		<h5 class="w3-text-teal">ÅRSPRØVE PROGRAMMERING - Aflevering d 17/6 2020</h5>
 		<table>
 		<tr>
-		<th>Dato</th><th>Video</th><th>Materiale</th>
+		<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th>
 		</tr>
 
 		<tr>
@@ -233,7 +233,7 @@ th {
 					og lave en endnu bedre besvarelse (det er i de fleste tilfælde muligt).
 					<table >
 					<tr>
-					<th>Dato</th><th>Video</th><th>Materiale</th>
+					<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th>
 					</tr>
 
 					<tr>
