--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ th {
 		<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th>
 		</tr>
 		<tr>
-		<td>D.19/3 2020</td>
+		<td>D.19/3</td>
 		<td><a href="https://youtu.be/3W35Gl_KmWQ">Video: Aflutning tilretning af posters</a></td>
 		<td><a href="2G/OOP_Posters/FORLØB - _OBJEKT ORIENTERET PROGRAMMERINGS POSTERS - HA_NDBOG.pdf">Posters grupper</a></td>
 	    	</tr>
@@ -105,12 +105,12 @@ th {
 		<tr>
 		<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th>
 		</tr>
-		<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/FSK2y8ShGsY">Del. 1 Om Processing med IntelliJ</a></td></tr>
-	    	<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/gMzuTSELgPY">Del. 2 Opgaven</a></td></tr>
-		<tr><td>D.24/3 2020</td><td><a href="https://youtu.be/AW3wyoQmLvg">Del. 3 Løsning</a></td></tr>
-	    	<tr><td>D.25/3 2020</td><td><a href="https://youtu.be/fqifMFBLLoA">Fravær</a></td></tr>
+		<tr><td>D.24/3</td><td><a href="https://youtu.be/FSK2y8ShGsY">Del. 1 Om Processing med IntelliJ</a></td></tr>
+	    	<tr><td>D.24/3</td><td><a href="https://youtu.be/gMzuTSELgPY">Del. 2 Opgaven</a></td></tr>
+		<tr><td>D.24/3</td><td><a href="https://youtu.be/AW3wyoQmLvg">Del. 3 Løsning</a></td></tr>
+	    	<tr><td>D.25/3</td><td><a href="https://youtu.be/fqifMFBLLoA">Fravær</a></td></tr>
 	    	<tr>
-		<td>D.26/3 2020</td><td><a href="https://youtu.be/jXC2HJI1Fg0">Maven</a></td>
+		<td>D.26/3</td><td><a href="https://youtu.be/jXC2HJI1Fg0">Maven</a></td>
 		<td>	
 			<a href="2G/Maven/pom.xml">pom.xml</a> , 
 			<a href="2G/Maven/Fa_ Processing i IntelliJ med Maven _-).pdf">Maven vejledning</a>
@@ -152,7 +152,7 @@ th {
 		</tr>
 
 		<tr>
-		<td>D.?/? 2020</td>
+		<td>D.?/?</td>
 		<td><a href=""></a></td>
 	    	</tr>
 	  	</table>
@@ -160,14 +160,14 @@ th {
 <!-- 2i PRO ..... XML FORLØB................. ------------------------->
 
 	    
-	    	<h5 class="w3-text-teal">XML- forløb - D.20/5 til D.27/5 2020</h5>
+	    	<h5 class="w3-text-teal">XML- forløb - D.20/5 til D.29/5 2020</h5>
 		<table>
 		<tr>
 		<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th>
 		</tr>
 
 		<tr>
-		<td>D.?/? 2020</td>
+		<td>D.?/?</td>
 		<td><a href=""></a></td>
 	    	</tr>
 	  	</table>
@@ -181,7 +181,7 @@ th {
 		</tr>
 
 		<tr>
-		<td>D.?/? 2020</td>
+		<td>D.?/?</td>
 		<td><a href=""></a></td>
 	    	</tr>
 	  	</table>
