--- a/index.html
+++ b/index.html
@@ -211,7 +211,14 @@ th {
 		      Her følger en liste over det nye stof vi skal lære i 3G:</br></p>
 	  <ul>
   		
-		  <li><u>Obejktorient programmering</u>,- dette er et stort emne, og vi kommer fortsat til at bruge meget tid på oop.</li>
+		  <li><u>Obejktorient programmering</u>,- dette er et stort emne, og vi kommer fortsat til at bruge meget tid på oop.
+		  Her følger de vigtigste underemner:</li>
+		      	<ul>
+      				<li>Klasser og Objekter,- hvad er forskellen og funktion?</li>
+      				<li>Indkapsling,- hvad er et godt desig af en klasse</li>
+				<li>Nedarving, hvad og hvordan bruges det</li>
+				<li>Polymorfi</li>
+    			</ul>
 		  <li><u>Interaktion imellem systemer</u>,- vi kigger på databasers og databasers interaktion med et program</li>
 		  <li><u>Biblioteker og generiske dele</u>,- dette emne dækkes af vores GUI-bibliotek, som vi bygger videre på<li>
 		  <li><u>Abstrakt dokumentation</u>,- vi øver os mere på at skrive rapporter og diverse diagrammer til at illustrere vores programmer.
