--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ th {
 
   <footer id="myFooter">
     <div class="w3-container w3-theme-l2 w3-padding-32">
-      <h4>Kontakt : Anders Petersen - ajrp@tec.dk</h4>
+      <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kontakt : Anders Petersen - ajrp@tec.dk</h4>
     </div>
 
     <div class="w3-container w3-theme-l1">
