--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@ th {
   <div class="w3-row w3-padding-64" id="3G">
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-teal">Indhold 3G</h1>
+	    
+	    <p>Velkommen til 3G. Grundlæggende programmering er nu noget i kan i søvne, i kender alt til for og while loops, 
+		    if statements, variable, datatyper scopes og funtioner. Hvis man ikke er stærk i dette må man ty til selvstudie.</br>
+	  	Det sidste år fokuserer vi på Hovedsageligt OOP, Rapportskrivning og kigger lidt på algoritmer. </p>
 
 <!-- DETTE ER KERNESTOF I 3G .................-->
 	    
