--- a/index.html
+++ b/index.html
@@ -250,12 +250,14 @@ th {
 					og lave en endnu bedre besvarelse (det er i de fleste tilfælde muligt).
 					<table >
 					<tr>
-					<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th>
+					<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th><th style="width: 300px">Formål</th>
 					</tr>
 
 					<tr>
 					<td></td>
 					<td><a href=""></a></td>
+					<td><a href=""></a></td>
+						<td>Reptition af lidt OOP: <i>Klasser og Objekter</i>, <i>Indkapsling</i></td>
 					</tr>
 					</table>
 					</div>
