--- a/index.html
+++ b/index.html
@@ -257,10 +257,41 @@ th {
 					<td></td>
 					<td><a href=""></a></td>
 					<td><a href=""></a></td>
-						<td>Reptition af lidt OOP: <i>Klasser og Objekter</i>, <i>Indkapsling</i></td>
+						<td><i>Klasser og Objekter</i>, <i>Indkapsling</i></td>
 					</tr>
 					</table>
-					</div>
+
+				<h5 class="w3-text-teal">Posters V 2.0</h5>
+					Vores posters fra sidste år blev aldrig hængt op. Men det gør ikke så meget, nu prøver vi forfra, med lidt mere overordnede
+					kategorier også nogle indenfor basal programmering.</br>
+					Det overordnede formål med dette forløb er et overblik over alt kendt kernestof. 
+					<table >
+					<tr>
+					<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th><th style="width: 300px">Formål</th>
+					</tr>
+
+					<tr>
+					<td></td>
+					<td><a href=""></a></td>
+					<td><a href=""></a></td>
+						<td><i>Overblik over kendt kernestof</i></td>
+					</tr>
+					</table>
+
+				<h5 class="w3-text-teal">Data visualisering & Med GUI bibliotek</h5>
+					Vi arbejder videre på GUI-bibliteket og forsøger at bruge det til at visualisere noget data fra en CSV fil.  
+					<table >
+					<tr>
+					<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th><th style="width: 300px">Formål</th>
+					</tr>
+
+					<tr>
+					<td></td>
+					<td><a href=""></a></td>
+					<td><a href=""></a></td>
+						<td><i>Datavisualisering</i>,<i>Generiske dele og Bibliotek</i></td>
+					</tr>
+					</table>
 	    
 	    
 
