--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@ th {
 
 			today = mm + '/' + dd + '/' + yyyy;
 			document.write(today);	
+			
+			function forlob(dd,mm,yyyy){
+				document.write("Dag: " + dd + " Måned: " + mm + " År : " + yyyy);	
+			}
+			
 		</script>	
 	
   <h4 class="w3-bar-item"><b>Indhold</b></h4>
@@ -255,7 +260,7 @@ th {
     		<div class="w3-twothird w3-container">
       			<h3 class="w3-text-teal">Forløb i 3G</h3>
 
-				<h5 class="w3-text-teal">Årsprøveprojektet V 2.0</h5>
+			<h5 class="w3-text-teal">Årsprøveprojektet V 2.0 <script>forlob(8,8,2020)</script></h5>
 					Dette miniforløb er vores første forløb i 3G. Formålet er at i skal finde jeres egne fejl i årsprøven fra sidste år,
 					og lave en endnu bedre besvarelse (det er i de fleste tilfælde muligt).
 					<table >
