--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ th {
 			var yyyy = today.getFullYear();
 
 			today = mm + '/' + dd + '/' + yyyy;
+			today.fontcolor("red");
 			document.write(today);	
 			
 			function forlob(dd,mm,yyyy){
