--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ th {
 				var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
 				var yyyy = today.getFullYear();
 
-				today = "Dag: " + dd + " Måned: " + mm + " År : " + yyyy;
+				today = "D." + dd + "/" + mm + "-" + yyyy;
 
 				document.write("<p>" + text.fontcolor("red") + " " + today.fontcolor("red") + "</p>");	
 			}
@@ -261,7 +261,7 @@ th {
     		<div class="w3-twothird w3-container">
       			<h3 class="w3-text-teal">Forløb i 3G</h3>
 
-			<h5 class="w3-text-teal"><script>forlob("Årsprøveprojektet V 2.0 ",8,8,2020)</script></h5>
+			<h5 class="w3-text-teal"><script>forlob("Årsprøveprojektet V 2.0 - ",8,8,2020)</script></h5>
 					Dette miniforløb er vores første forløb i 3G. Formålet er at i skal finde jeres egne fejl i årsprøven fra sidste år,
 					og lave en endnu bedre besvarelse (det er i de fleste tilfælde muligt).
 					<table >
