--- a/index.html
+++ b/index.html
@@ -49,7 +49,19 @@ th {
   </a>
 		<script>
 			
-			function forlob(text,dd,mm,yyyy){
+			function dato(){
+				var today = new Date();
+				var dd = String(today.getDate()).padStart(2, '0');
+				var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
+				var yyyy = today.getFullYear();
+
+				today = "D." + dd + "/" + mm + "-" + yyyy;
+
+				document.write("<p> Dato i dag: " + text.fontcolor("red") + " " + today.fontcolor("red") + "</p>");	
+			}
+			
+			
+			function forlob(text,dd,mm,yyyy,dd1,mm2){
 				var today = new Date();
 				var dd = String(today.getDate()).padStart(2, '0');
 				var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
@@ -70,7 +82,7 @@ th {
 	<a class="w3-bar-item w3-button w3-hover-black" href="#3G">Indhold 3G</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#kernestof3G"><i> - Kernestof i 3G</i></a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#forlob3G"><i> - Forløb i 3G</i></a>
-	<script>forlob("Dato i dag - ",20,8,2020);</script>
+	<script>dato();</script>
 </nav >
 
 <!-- Overlay effect when opening sidebar on small screens -->
@@ -261,7 +273,7 @@ th {
     		<div class="w3-twothird w3-container">
       			<h3 class="w3-text-teal">Forløb i 3G</h3>
 
-			<h5 class="w3-text-teal"><script>forlob("Årsprøveprojektet V 2.0 - ",8,8,2020)</script></h5>
+			<h5 class="w3-text-teal"><script>forlob("Årsprøveprojektet V 2.0 - ",8,8,2020,17,8)</script></h5>
 					Dette miniforløb er vores første forløb i 3G. Formålet er at i skal finde jeres egne fejl i årsprøven fra sidste år,
 					og lave en endnu bedre besvarelse (det er i de fleste tilfælde muligt).
 					<table >
