--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ th {
 				
 				text = text + " " + start;
 				
-				if(today.toJSON() >= start.toJSON){
+				if(today.toJSON() >= start.toJSON()){
 					document.write("<p>" + text.fontcolor("red") + "</p>");	
 				}else{
 					document.write("<p>" + text + "</p>");					
