--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ th {
 			function forlob(text,dd1,mm1,dd2,mm2,yyyy){
 				var today = new Date();
 				today.setHours(0,0,0);
-				var start = new Date(yyyy,mm1,dd1,0,0,0,0);
-				var slut  = new Date(yyyy,mm2,dd2,0,0,0,0);
+				var start = new Date(yyyy,mm1-1,dd1,0,0,0,0);
+				var slut  = new Date(yyyy,mm2-1,dd2,0,0,0,0);
 				
 				text = text + " " + start;
 				
