--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@ th {
 				text = text + " " + start.getDate() + "/" + (start.getMonth() +1) + "-" + start.getFullYear();
 				
 				if(today.toJSON() >= start.toJSON() && today.toJSON() < slut.toJSON()){
-					document.write("<p>Igangværende projekt</b>" + text.fontcolor("red") + "</p>");	
+					text = "Igangværende projekt </br>" + text;
+					document.write("<p>" + text.fontcolor("red") + "</p>");	
 				}else{
 					document.write("<p>" + text + "</p>");					
 				}
