--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@ th {
 			}
 			
 			
-			function forlob(text,dd1,mm1,dd2,mm2,yyyy){
+			function forlob(titel,dd1,mm1,dd2,mm2,yyyy){
 				var today = new Date();
 				today.setHours(0,0,0);
 				var start = new Date(yyyy,mm1-1,dd1,0,0,0,0);
 				var slut  = new Date(yyyy,mm2-1,dd2,0,0,0,0);
 				
-				text = text + " " + start.getDate() + "/" + (start.getMonth() +1) + "-" + start.getFullYear();
+				var text = titel + " - fra" + start.getDate() + "/" + (start.getMonth() +1) + "-" + start.getFullYear();
+				text = text + " til " + slut.getDate() + "/" + (slut.getMonth() +1) + "-" + slut.getFullYear();
 				
 				if(today.toJSON() >= start.toJSON() && today.toJSON() < slut.toJSON()){
 					text = "Igangværende projekt </br>" + text;
