--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ th {
 	<a class="w3-bar-item w3-button w3-hover-black" href="#3G">Indhold 3G</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#kernestof3G"><i> - Kernestof i 3G</i></a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#forlob3G"><i> - Forløb i 3G</i></a>
-	<script>dato();</script>
+	<a class="w3-bar-item w3-button w3-hover-black" href=""><script>dato();</script></a>
 </nav >
 
 <!-- Overlay effect when opening sidebar on small screens -->
