--- a/index2G.html
+++ b/index2G.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Programmering 3i - 2020/2021 - H.C. Ørsted Lyngby</title>
+<title>Programmering 2i - 2019/2020 - H.C. Ørsted Lyngby</title>
 <meta charset="UTF-8">
 	
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,7 +37,7 @@ th {
 <div class="w3-top">
   <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
-	    <a href="#" class="w3-bar-item w3-button w3-theme-l1">Programmering 3i - 20/21</a>
+	    <a href="#" class="w3-bar-item w3-button w3-theme-l1">Programmering 2i - 19/20</a>
 
   </div>
 </div>
@@ -82,9 +82,8 @@ th {
 		</script>	
 	
   <h4 class="w3-bar-item"><b>Indhold</b></h4>
-	<a class="w3-bar-item w3-button w3-hover-black" href="#2G">Indhold 2G</a>
-	<a class="w3-bar-item w3-button w3-hover-black" href="#kernestof3G"><i> - Kernestof i 2G</i></a>
-	<a class="w3-bar-item w3-button w3-hover-black" href="#forlob2G"><i> - Forløb i 2G</i></a>
+	<a class="w3-bar-item w3-button w3-hover-black" href="#forlob2G">Forløb i 2G</a>
+	<a class="w3-bar-item w3-button w3-hover-black" href="index.html">Gå til 3G 2020/2021</a>
 </nav >
 
 <!-- Overlay effect when opening sidebar on small screens -->
