--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@ th {
   <h4 class="w3-bar-item"><b>Indhold</b></h4>
   	<a class="w3-bar-item w3-button w3-hover-black" href="#velkommen">Velkommen</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#3G">Indhold</a>
-	<a class="w3-bar-item w3-button w3-hover-black" href="#kernestof"><i> - Kernestof</i></a>
-	<a class="w3-bar-item w3-button w3-hover-black" href="#forlob"><i> - Forløb</i></a>
-	<a class="w3-bar-item w3-button w3-hover-black" href="index2G.html"><i> Gå til 2G 2019/2020 </i></a>
+	<a class="w3-bar-item w3-button w3-hover-black" href="#kernestof">Kernestof</a>
+	<a class="w3-bar-item w3-button w3-hover-black" href="#forlob">Forløb</a>
+	<a class="w3-bar-item w3-button w3-hover-black" href="index2G.html" style="background:lightblue">Gå til 2G 2019/2020</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href=""><script>dato();</script></a>
 </nav >
 
