--- a/index2G.html
+++ b/index2G.html
@@ -83,7 +83,7 @@ th {
 	
   <h4 class="w3-bar-item"><b>Indhold</b></h4>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#forlob2G">Forløb i 2G</a>
-	<a class="w3-bar-item w3-button w3-hover-black" href="index.html">Gå til 3G 2020/2021</a>
+	<a class="w3-bar-item w3-button w3-hover-black" href="index.html" style="background:lightblue">Gå til 3G 2020/2021</a>
 </nav >
 
 <!-- Overlay effect when opening sidebar on small screens -->
