--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ th {
 	    
 	      <div class="w3-row w3-padding-64" id="kernestof">
     <div class="w3-twothird w3-container">
-      <h3 class="w3-text-teal">Kernestof i 3G</h3>
+      <h3 class="w3-text-teal">Kernestof</h3>
 	   	<p>	
 		Det forventes, at man stadig kan og bruger alt det man har lært i 2G.</br>
 		</p>
