--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ th {
 		</p>
 
 		<p>
-		Her følger en liste over det nye stof vi har lært i 2G:</br>
+		Kernestof fra 2G:</br>
 		</p>
 			
 			<ul>
@@ -133,7 +133,7 @@ th {
 	
 	
 		<p>
-		Her følger en liste over det nye stof vi skal lære i 3G:</br>
+		Kernestof i 3G:</br>
 		</p>
 	  	
 			<ul>
