--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ th {
 	    
 	      <div class="w3-row w3-padding-64" id="kernestof">
     <div class="w3-twothird w3-container">
-      <h3 class="w3-text-teal">Kernestof</h3>
+      <h1 class="w3-text-teal">Kernestof</h1>
 	   	<p>	
 		Det forventes, at man stadig kan og bruger alt det man har lært i 2G.</br>
 		</p>
@@ -171,7 +171,7 @@ th {
 	
 	<div class="w3-row w3-padding-64" id="forlob">
     		<div class="w3-twothird w3-container">
-      			<h3 class="w3-text-teal">Forløb i 3G</h3>
+      			<h1 class="w3-text-teal">Forløb i 3G</13>
 
 			<h5 class="w3-text-teal"><script>forlob("Årsprøveprojektet V 2.0 - ",8,8,17,8,2020)</script></h5>
 					Dette miniforløb er vores første forløb i 3G. Formålet er at i skal finde jeres egne fejl i årsprøven fra sidste år,
