--- a/index.html
+++ b/index.html
@@ -189,10 +189,7 @@ th {
 					</tr>
 					</table>
 
-				<h5 class="w3-text-teal">Posters V 2.0</h5>
-					Vores posters fra sidste år blev aldrig hængt op. Men det gør ikke så meget, nu prøver vi forfra, med lidt mere overordnede
-					kategorier også nogle indenfor basal programmering.</br>
-					Det overordnede formål med dette forløb er et overblik over alt kendt kernestof. 
+				<h5 class="w3-text-teal">Nye Posters (denne gang kommer de op)</h5>
 					<table >
 					<tr>
 					<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th><th style="width: 300px">Formål</th>
@@ -206,7 +203,7 @@ th {
 					</tr>
 					</table>
 
-				<h5 class="w3-text-teal">Data visualisering & Med GUI bibliotek</h5>
+				<h5 class="w3-text-teal">Data visualisering csv-fil & GUI bibliotek</h5>
 					Vi arbejder videre på GUI-bibliteket og forsøger at bruge det til at visualisere noget data fra en CSV fil.  
 					<table >
 					<tr>
@@ -248,7 +245,7 @@ th {
 
   <footer id="myFooter">
     <div class="w3-container w3-theme-l2 w3-padding-32">
-      <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kontakt : Anders Petersen - ajrp@tec.dk</h4>
+      <h4>Kontakt : Anders Petersen - ajrp@tec.dk</h4>
     </div>
 
     <div class="w3-container w3-theme-l1">
