--- a/index.html
+++ b/index.html
@@ -203,8 +203,7 @@ th {
 					</tr>
 					</table>
 
-				<h5 class="w3-text-teal">Data visualisering csv-fil & GUI bibliotek</h5>
-					Vi arbejder videre på GUI-bibliteket og forsøger at bruge det til at visualisere noget data fra en CSV fil.  
+				<h5 class="w3-text-teal">Data visualisering af csv-fil & GUI bibliotek</h5>
 					<table >
 					<tr>
 					<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th><th style="width: 300px">Formål</th>
