--- a/index2G.html
+++ b/index2G.html
@@ -98,7 +98,26 @@ th {
  	
 <!-- DETTE ER 2G INHOLD ............................................................................................................................... -->
 
-
+	    
+<div class="w3-row w3-padding-64" id="Kernestof i 2G">
+    	<div class="w3-twothird w3-container">
+      		<h1 class="w3-text-teal">Kernestof i 2G</h1>
+		<ul>
+			<li><u>Grundlæggende viden om processing:</u></br>
+			<i>Bl.a. setup, draw, size, background, clear, frameRate, mouseX, mouseY, frameCount.</i></li>
+			
+			<li><u>Variabler og datatyper:</u></br>
+			<i>variable deklaration f.eks. int x, værditildeling f.eks. x = 0, scope og kode-blok, datatyperne heltals og kommatal (int og float) og andre, konvertering (casting)</i></li>
+			
+			<li><u>Udtryk:</u></br>
+			</li>
+	
+	
+			<li><u>Kontrolstrukturer:</u></li>
+			<li><u>Parametrisering:</u></li>
+		<ul>
+	</div>
+</div>
 
 	    
 <div class="w3-row w3-padding-64" id="forlob2G">
