--- a/index2G.html
+++ b/index2G.html
@@ -82,6 +82,7 @@ th {
 		</script>	
 	
   <h4 class="w3-bar-item"><b>Indhold</b></h4>
+	<a class="w3-bar-item w3-button w3-hover-black" href="#kernestof2G">Kernestof i 2G</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#forlob2G">Forløb i 2G</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="index.html" style="background:lightblue">Gå til 3G 2020/2021</a>
 </nav >
@@ -99,7 +100,7 @@ th {
 <!-- DETTE ER 2G INHOLD ............................................................................................................................... -->
 
 	    
-<div class="w3-row w3-padding-64" id="Kernestof i 2G">
+<div class="w3-row w3-padding-64" id="kernestof2G">
     	<div class="w3-twothird w3-container">
       		<h1 class="w3-text-teal">Kernestof i 2G</h1>
 		<ul>
