--- a/index2G.html
+++ b/index2G.html
@@ -104,18 +104,30 @@ th {
     	<div class="w3-twothird w3-container">
       		<h1 class="w3-text-teal">Kernestof i 2G</h1>
 		<ul>
-			<li><u>Grundlæggende viden om processing:</u></br>
-			<i>Bl.a. setup, draw, size, background, clear, frameRate, mouseX, mouseY, frameCount.</i></li>
+			<li><u>Grundlæggende viden om processing (og Java):</u></br>
+			<i>Bl.a. setup, draw, size, background, clear, frameRate, mouseX, mouseY, frameCount.</br>
+			Tilfældighedsgenerator i processing, random f.eks random(0,6) returnerer</i></li>
 			
 			<li><u>Variabler og datatyper:</u></br>
-			<i>variable deklaration f.eks. int x, værditildeling f.eks. x = 0, scope og kode-blok, datatyperne heltals og kommatal (int og float) og andre, konvertering (casting)</i></li>
+			<i>variable deklaration f.eks. int x, værditildeling f.eks. x = 0</br>
+			Scope og kode-blok,</br> 
+			Datatyperne heltals og kommatal (int og float) og andre, konvertering (casting)</br>
+			Arrays; lister af en bestem type, f.eks her en liste på 10 heltal: int[] liste = new int[10].
+			</i></li>
 			
 			<li><u>Udtryk:</u></br>
+	 		Betingelser også kaldet “boolske udtryk” (conditions) f.eks. x == y; eller x != y;</li>
+	
+	
+			<li><u>Kontrolstrukturer:</u></br>
+			if-statements, for-loop og while-loops.</br>
+			break: kommando til at hoppe ud af et loop</br>
+			continue: kommando til at hoppe videre til næste “step” i loopet</br>
 			</li>
-	
-	
-			<li><u>Kontrolstrukturer:</u></li>
-			<li><u>Parametrisering:</u></li>
+
+			<li><u>Parametrisering:</u></br>
+			Lav dine egne funktioner i java; hvad er returtype, input parametre også kaldet argumenter og funktionsnavnet</br>
+			Tekst variable i java; Strings, og sammensætning af tekst med +</li>
 		<ul>
 	</div>
 </div>
