--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@ th {
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-teal">Velkommen</h1>
 		<p>
-			Velkommen til Programmering 3i. 
-      Dette website indeholder information om diverse fagligemål, kernestof, meteriale og studieplan for holdet "Programmering 3i år 2020/2021".
-      Hvis der er noget du ikke forstår eller synes mangler er du mere end velkommen til at kontakte underviseren Anders Petersen, på mail ajrp@tec.dk.  
+		Velkommen til Programmering 3i.</br> 
+      		Dette website indeholder information om diverse fagligemål, kernestof, materiale og studieplan for holdet "Programmering 3i år 2020/2021 og 2019/2020".</br>
+      		Hvis der er noget du ikke forstår eller synes mangler er du mere end velkommen til at kontakte mig mail ajrp@tec.dk.  
 		</p>
     </div>
   </div>
