--- a/index.html
+++ b/index.html
@@ -180,14 +180,19 @@ th {
 					og lave en endnu bedre besvarelse (det er i de fleste tilfælde muligt).
 					<table >
 					<tr>
-					<th>Dato</th><th style="width: 300px">Video</th><th style="width: 300px">Materiale</th><th style="width: 300px">Formål</th>
+					<th>Dato</th>
+					<th style="width: 300px">Video</th>
+					<th style="width: 300px">Materiale</th>
+					<th style="width: 300px">Formål</th>
+					<th style="width: 300px">Aflevering</th>
 					</tr>
 
 					<tr>
-					<td></td>
+					<td>Onsdag d.12/8</td>
 					<td><a href=""></a></td>
 					<td><a href=""></a></td>
-						<td><i>Klasser og Objekter</i>, <i>Indkapsling</i></td>
+					<td><i>Klasser og Objekter</i>, <i>Indkapsling</i></td>
+					<td> Ingen Aflevering </td>
 					</tr>
 					</table>
 
