--- a/index.html
+++ b/index.html
@@ -189,14 +189,15 @@ th {
 
 					<tr>
 					<td>Onsdag d.12/8</td>
+					<td></td>
 					<td>	
 						<a href="3G/ret_aarsprove_opgave.txt">ret_aarsprove_opgave.txt</a> , 
 						<a href="3G/Årsprøve_Programmering_B.zip">Årsprøve_Programmering_B.zip</a>
 					</td>
-					<td><a href=""></a></td>
-					<td><i>Klasser og Objekter</i>, <i>Indkapsling</i></td>
+					<td>Klasser og Objekter , Indkapsling , "Opgave Løsning" RTFM</td>
 					<td> Ingen Aflevering </td>
 					</tr>
+						
 					</table>
 
 				<h5 class="w3-text-teal">Nye Posters (denne gang kommer de op)</h5>
