--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ th {
 					<th style="width: 300px">Video</th>
 					<th style="width: 300px">Materiale</th>
 					<th style="width: 300px">Formål</th>
-					<th style="width: 300px">Aflevering</th>
+					<th style="width: 300px">Evaluering</th>
 					</tr>
 
 					<tr>
@@ -195,7 +195,7 @@ th {
 						<a href="3G/Årsprøve_Programmering_B.zip">Årsprøve_Programmering_B.zip</a>
 					</td>
 					<td>Klasser og Objekter , Indkapsling , "Opgave Løsning" RTFM</td>
-					<td> Ingen Aflevering </td>
+					<td> To tilfældige præsenterer </td>
 					</tr>
 						
 					</table>
