--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ th {
 						<a href="3G/ret_aarsprove_opgave.txt">ret_aarsprove_opgave.txt</a> , 
 						<a href="3G/Årsprøve_Programmering_B.zip">Årsprøve_Programmering_B.zip</a>
 					</td>
-					<td>Klasser og Objekter , Indkapsling , "Opgave Løsning" RTFM</td>
+					<td>Klasser og Objekter , Indkapsling , VIGTIGT:RTFM</td>
 					<td> To tilfældige præsenterer </td>
 					</tr>
 						
