--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ th {
   <h4 class="w3-bar-item"><b>Indhold</b></h4>
   	<a class="w3-bar-item w3-button w3-hover-black" href="#velkommen">Velkommen</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#kernestof">Kernestof</a>
+	<a class="w3-bar-item w3-button w3-hover-black" href="#clean">Gode vaner</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="#forlob">Forløb</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href="index2G.html" style="background:lightblue">Gå til 2G 2019/2020</a>
 	<a class="w3-bar-item w3-button w3-hover-black" href=""><script>dato();</script></a>
@@ -112,6 +113,24 @@ th {
 	    
 <!-- DETTE ER 3G INHOLD ............................................................................................................................... --
 	
+	<div class="w3-row w3-padding-64" id="clean">
+    <div class="w3-twothird w3-container">
+      <h1 class="w3-text-teal">Gode vaner</h1>
+	    	<p>
+		Et program der fungere, kan sagtens bestå af "grim" ulæselig kode.
+		Ulæselig og grim kode er farlig kode! Det er svært at lave ændringer og nemt at lav fejl.
+		Den optimale kode er "Clean Code"; kode der er så enkel og letforståelig, at man ikke behøver nogen forklaring.
+		Vi arbejder tre følgende gode vaner, der automatisk gør koden mere "clean":
+		
+		<ul>
+			<li>God navngivning</li>
+			<li>DRY: Dont repeat yourself</li>
+			<li>KISS: Keep it simple stupid</li>
+	    	</ul>
+	    	
+	    	</p>
+    </div>
+  </div>
 	
 	
 <!-- DETTE ER KERNESTOF I 3G .................-->
