--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@ th {
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-teal">Gode vaner</h1>
 	    	<p>
-		Et program der fungere, kan sagtens bestå af "grim" ulæselig kode.
-		Ulæselig og grim kode er farlig kode! Det er svært at lave ændringer og nemt at lav fejl.
+		Et program der fungerer, kan sagtens bestå af "grim" ulæselig kode.</br>
+		Ulæselig og grim kode er farlig kode! Det er svært at lave ændringer og nemt at lav fejl.</br>
 		Den optimale kode er "Clean Code"; kode der er så enkel og letforståelig, at man ikke behøver nogen forklaring.
 		Vi arbejder tre følgende gode vaner, der automatisk gør koden mere "clean":
 		
