--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ th {
   </div>
 	
 	    
-<!-- DETTE ER 3G INHOLD ............................................................................................................................... --
+<!-- DETTE ER 3G INHOLD ............................................................................................................................... -->
 	
 	<div class="w3-row w3-padding-64" id="clean">
     <div class="w3-twothird w3-container">
